ingress-tcpport/http-port-dep/go-app-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-http
  labels:
    app: go-app-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app-http
  template:
    metadata:
      labels:
        app: go-app-http
    spec:
      containers:
      - name: go-app-http
        image: nivasbala/go-app-http
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-http
spec:
  selector:
    app: go-app-http
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
