ingress-tcpport/http-port-dep/go-app-http-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: go-app-http-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret  # This needs to be created (See Comments below)
  rules:
  - http:
      paths:
      - path: /test
        backend:
          serviceName: go-app-http
          servicePort: 80
